# Procedural_Midi

./: .gitignore  Pattern1  README.md  c_major.mid  create_C_major.py  create_midi.py  generate_midi_txt.py  generate_note_enum.py  main.py  mao_esquerda.midtxt  note.py  note_recognition.py  pattern_generator.py  pitch.py  pyproject.toml  stationary_distribution.py  tempo.py  tempo_test.mid  tempo_test.py  user_settings.py  velocity.py  yourMidi.mid
Harmonia/: RandomWalk.py  pattern_generator.py  stationary_distribution.py  test.py
Input/: example(1).midtxt  mao_esquerda(4).midtxt
InputExamples/: TheLick.midtxt  mao_esquerda(1).midtxt  mao_esquerda(3).midtxt
Markov/: RandomWalk.py  test.py
Midtxt_generators/: harpejos.py
Modelos/: chord.py  note.py  pitch.py
Parsers/: note_recognition.py  pitches_to_midtxt.py
Print/: print_mid.py
Scripts/: generate_pitch_enum.py
Tests/: create_C_major.py  create_midi.py  tempo_test.py
UserSettings/: UserSettings.py
harmony/: pattern_generator.py  random_walk.py  stationary_distribution.py
input_examples/: mao_esquerda(2).midtxt  mao_esquerda.midtxt
input_old/: mao_esquerda(1).midtxt  mao_esquerda(2).midtxt  mao_esquerda.midtxt
midtxt_generators/: arpeggio.py
models/: chord.py  note.py  pitch.py  scales.py
parsers/: midtxt_to_midi.py  note_recognition.py  pitches_to_midtxt.py
scripts/: move_to_old.py
tests/: create_C_major.py  tempo_test.py
