[tool.poetry]
name = "procedural_midi"
version = "0.1.0"
description = ""
authors = ["Ian-Geraldi <iangc49@gmail.com>"]
readme = "README.md"
packages = [{include = "procedural_midi"}]

[tool.poetry.dependencies]
python = "^3.10"
mido = "^1.2.10"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
